# a_cave

./: .editorconfig  .gitmodules  CMakeLists.txt  Makefile  README.md
assets/: intro_title.xcf
demo/: arkanoid.c  arkanoid_2.c  asteroids.c
src/: cbuf.c  component.c  component.h  event.c  event.h  game.c  game.h  intro.c  main.c  math.h  paused.c  physics.c  physics.h  playing.c  pp.h  render.c  render.h  start.c  state.c  state.h  stats.c  stats.h  texture.c  texture.h  transform.c  transform.h  util.h
src/component/: movement.c  player_control_movement.c  simple.c
src/engine/: backend.h  backend_glfw.c  backend_raylib.c  backend_vk.c  backend_vk_conf.h  backend_vk_ui.frag  backend_vk_ui.vert  cbuf.c  engine.c  engine.h  event.c  event.h  glad_vk.c  glad_vk.h  image.c  input.c  main.c  math.h  physics.c  physics.h  stats.h  texture.c  texture.h  transform.h  util.h
src/prefab/: camera.c  grass.c  player.c  target.c
src/state/: intro.c  local.h  main_menu.c  paused.c  playing.c  ui_demo.c
src/system/: armor.c  movement.c  player_movement.c  power.c  shield.c
wbuild/: setup.sh
